@@ -1140,6 +1140,7 @@ extern struct block_header nextfree[];
 extern bool field0_valid;
 
 extern int do_flags;
+extern bool do_itrace;	/* separate so can poke from a debugger */
 
 extern SRCFILE *srcfiles; /* source files */
 
@@ -1160,7 +1161,6 @@ enum do_flag_values {
 	DO_PROFILE	   = 0x02000,	/* profile the program */
 	DO_DEBUG	   = 0x04000,	/* debug the program */
 	DO_MPFR		   = 0x08000,	/* arbitrary-precision floating-point math */
-	DO_ITRACE	   = 0x10000	/* trace byte-code instructions */
 };
 
 #define do_traditional      (do_flags & DO_TRADITIONAL)
@@ -1175,7 +1175,6 @@ enum do_flag_values {
 #define do_sandbox          (do_flags & DO_SANDBOX)
 #define do_debug            (do_flags & DO_DEBUG)
 #define do_mpfr             (do_flags & DO_MPFR)
-#define do_itrace           (do_flags & DO_ITRACE)
 
 extern bool do_optimize;
 extern int use_lc_numeric;
