@@ -146,6 +146,7 @@ static void set_locale_stuff(void);
 static bool stopped_early = false;
 
 int do_flags = false;
+bool do_itrace = false;			/* provide simple instruction trace */
 bool do_optimize = true;		/* apply default optimizations */
 static int do_nostalgia = false;	/* provide a blast from the past */
 static int do_binary = false;		/* hands off my data! */
@@ -1617,7 +1618,7 @@ parse_args(int argc, char **argv)
 			break;
 
 		case 'I':
-			do_flags |= DO_ITRACE;
+			do_itrace = true;
 			break;
 
 		case 'l':
